--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
 					<li class="active"><a href="home.html">Home</a></li>
 					<li><a href="mybooks.html">My books</a></li>
 					<li><a href="booksearch.html">Book search</a></li>
-					<li><a href="profile.html">My Profile</a></li>
+					<li><a href="index.html">Sign Out</a></li>
 				</ul>
 				<ul class="fh5co-social">
 					<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -53,7 +53,7 @@
 		<!-- Header -->
 		<header id="fh5co-header" role="banner">
 			<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle fh5co-nav-white"><i></i></a>
-			<div id="fh5co-logo" class="text-center"><a href="index.html"><img src="images/logo.png" alt="Image"></a></div>
+			<div id="fh5co-logo" class="text-center"><img src="images/logo.png" alt="Image"></div>
 		</header>
 		<!-- Header -->
 		
