--- a/mybooks.html
+++ b/mybooks.html
@@ -6,7 +6,6 @@
 	<title>My Books</title>
 
 
-  	<link rel="shortcut icon" href="favicon.ico">
 
   	<!-- Google Webfont -->
 	<link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700,400italic|Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -53,7 +52,7 @@
 		<!-- Header -->
 		<header id="fh5co-header" role="banner">
 			<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle fh5co-nav-white"><i></i></a>
-			<div id="fh5co-logo" class="text-center"><a href="index.html"><img src="images/logo.png" alt="Image"></a></div>
+			<div id="fh5co-logo" class="text-center"><img src="images/logo.png" alt="Image"></div>
 		</header>
 		<!-- Header -->
 		
@@ -151,16 +150,9 @@
 
 			</div>
 
-			
-		
-
 		</main>
 		<!-- Main -->
 
-		<!-- Go To Top -->
-		<a href="#" class="fh5co-gotop"><i class="ti-angle-up"></i></a>
-		
-        <script src="js/app.js"></script>
 		<!-- jQuery -->
 		<script src="js/jquery-1.10.2.min.js"></script>
 		<!-- jQuery Easing -->
