--- a/profile.html
+++ b/profile.html
@@ -4,15 +4,8 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Profile</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-  	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-  	<meta name="author" content="FREEHTML5.CO" />
+	<title>Admin</title>
 
-
-
-  	<link rel="shortcut icon" href="favicon.ico">
 
   	<!-- Google Webfont -->
 	<link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700,400italic|Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -35,32 +28,13 @@
 	
 
 	</head>
-	<body class="gototop">
+	<body class="gototop" onload="printBooks()">
 		
-		<!-- Navigation -->
-		<div id="fh5co-main-nav-wrap">
-			<div class="fh5co-nav-overlay"></div>
-			<div class="fh5co-nav-inner">
-				<ul id="fh5co-main-nav">
-					<li><a href="home.html">Home</a></li>
-					<li><a href="mybooks.html">My books</a></li>
-					<li><a href="booksearch.html">Book search</a></li>
-					<li class="active"><a href="profile.html">My Profile</a></li>
-				</ul>
-				<ul class="fh5co-social">
-					<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="#"><i class="fa fa-instagram"></i></a></li>
-					<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-				</ul>
-			</div>
-		</div>
-		<!-- Navigation -->
+		
 
 		<!-- Header -->
 		<header id="fh5co-header" role="banner">
-			<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle fh5co-nav-white"><i></i></a>
-			<div id="fh5co-logo" class="text-center"><a href="index.html"><img src="images/logo.png" alt="Image"></a></div>
+			<div id="fh5co-logo" class="text-center"><img src="images/logo.png" alt="Image"></div>
 		</header>
 		<!-- Header -->
 		
@@ -70,13 +44,51 @@
 			<div class="container">
 				<div class="fh5co-hero-text-wrap">
 					<div class="fh5co-hero-text">
-						<h1>My profile</h1>
+						<h1>Administration page</h1>
 					</div>
 				</div>
 			</div>
 		</aside>
 		<!-- Hero -->
 		
+				<!-- Main -->
+		<main role="main">
+	
+			<div class="container" id="fh5co-portfolio">
+				<!-- row -->
+				<div class="row">
+					<div class="col-md-12">
+						<p id="borrowedName"></p><br/>
+					</div>
+				</div>
+				<!-- row -->
+
+			</div>
+
+		</main>
+		
+		
+	<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-firestore.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyBNG2fOjNs5JBr_D6kc0pTh6_zGDw25G-E",
+    authDomain: "library-management-subsystem.firebaseapp.com",
+    databaseURL: "https://library-management-subsystem.firebaseio.com",
+    projectId: "library-management-subsystem",
+    appId: "1:658412865344:web:d2e240135a0d9988ebdca5",
+    measurementId: "G-83W4H65MW6"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+</script>	
 
 			
 		<!-- jQuery -->
@@ -97,6 +109,7 @@
 		<script src="js/velocity.min.js"></script>
 		<!-- Main JS -->
 		<script src="js/main.js"></script>
-
+        
+        <script src="js/returnbook.js"></script>
 	</body>
 </html>
